Extension rules
CPILint now supports custom rules written in Java. ExtensionRuleFactory
is a new interface for extension rule factories. These are loaded at
runtime using Java's Service Provider Interface. They generate Rule
instances that are then checked in exactly the same way as the built-in
rules.

A new page explaining how to write custom rules and factories will be
added to the CPILint wiki.